--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,2 @@
- docker run -it -e NGROK_AUTHTOKEN=<token> ngrok/ngrok http 80
+Name = CI
+docker run -it -e NGROK_AUTHTOKEN=<token> ngrok/ngrok http 80
